vue: left side bar wraping fix

--- a/VuePage/style/main.scss
+++ b/VuePage/style/main.scss
@@ -175,18 +175,19 @@ p {
   width: fit-content;
   max-height: calc(100vh - 51px);
 
+  padding-top: 2rem;
+  padding-bottom: 10rem;
+  padding-left: 2rem;
+  padding-right: 5rem;
+
   border-right: solid 1px $divide;
   overflow-y: scroll;
+  white-space: nowrap;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 2rem;
-
-  padding-top: 2rem;
-  padding-bottom: 10rem;
-  padding-left: 2rem;
-  padding-right: 5rem;
 
   transition: all 0.25s ease;
   @media screen and (max-width: 900px) {
@@ -283,6 +284,7 @@ p {
 
 .content {
   max-width: 800px;
+  width: fit-content;
   margin-inline: auto;
   padding-inline: 4rem;
 
